@@ -7,6 +7,8 @@
  - Added missing extern for missing/fmemopen.c to avoid warning on MacOS 10.7+
  - No longer register NOTE_EXTEND; this event is not always merged with
    NOTE_WRITE on MacOS
+ - New directory-watch option ('-d'). In this mode a shell while-loop can be
+   used to track the addition of new files.
 
 = Release History
 
